# asr_approx_mvbb

./: CMakeLists.txt  License.txt  README.md  package.xml
include/ApproxMVBB/: ComputeApproxMVBB.hpp  PointFunctions.hpp
include/ApproxMVBB/Config/: Config.hpp
include/asr_approx_mvbb/ApproxMVBB/: AABB.hpp  AngleFunctions.hpp  ComputeApproxMVBB.hpp  ConvexHull2D.hpp  KdTree.hpp  MakeCoordinateSystem.hpp  MinAreaRectangle.hpp  OOBB.hpp  PointFunctions.hpp  ProjectedPointSet.hpp  RandomGenerators.hpp  TypeDefsPoints.hpp
include/asr_approx_mvbb/ApproxMVBB/Common/: AssertionDebug.hpp  LogDefines.hpp  MyMatrixTypeDefs.hpp  Platform.hpp  TypeDefs.hpp  TypeDefsPoints.hpp
include/asr_approx_mvbb/ApproxMVBB/Config/: Config.hpp
include/asr_approx_mvbb/ApproxMVBB/Diameter/: EstimateDiameter.hpp
include/asr_approx_mvbb/ApproxMVBB/Diameter/Utils/: alloc.hpp  util.hpp
include/asr_approx_mvbb/ApproxMVBB/GeometryPredicates/: Predicates.hpp  PredicatesInit.hpp  Rounding.hpp
licenses/: third_party_licenses.txt
src/ApproxMVBB/: AABB.cpp  ComputeApproxMVBB.cpp  ConvexHull2D.cpp  MinAreaRectangle.cpp  OOBB.cpp  ProjectedPointSet.cpp  RandomGenerators.cpp
src/ApproxMVBB/Common/: MyMatrixTypeDefs.cpp
src/Diameter/: EstimateDiameter.cpp  alloc.cpp  rand.cpp  util.cpp
src/GeometryPredicates/: Predicates.cpp  PredicatesInit.cpp
